added tests for canBeRegistered method